<resources>
    <string name="app_name">Snake</string>
    <string name="btn_left">LEFT</string>
    <string name="btn_right">RIGHT</string>
    <string name="btn_up">UP</string>
    <string name="btn_down">DOWN</string>
    <string name="start">START</string>
    <string name="restart">RESTART</string>
    <string name="edit_width">Width</string>
    <string name="edit_height">Height</string>
    <string name="edit_default">10</string>
</resources>